--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build-server": "cargo install --path server",
     "build-ui": "webpack",
-    "dev": "webpack --watch"
+    "watch": "webpack --watch",
+    "dev": "node ui/dev-server.js"
   },
   "keywords": [],
   "author": "",
@@ -21,12 +22,18 @@
     "@babel/plugin-proposal-class-properties": "^7.10.1",
     "@babel/preset-env": "^7.10.3",
     "@babel/preset-react": "^7.10.1",
+    "@types/html-webpack-plugin": "^3.2.3",
     "@types/lodash": "^4.14.157",
     "babel-loader": "^8.1.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.2",
+    "express": "^4.17.1",
+    "html-webpack-plugin": "^4.3.0",
     "ts-loader": "^7.0.5",
     "typescript": "^3.9.5",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
+    "webpack-dev-middleware": "^3.7.2",
     "webpack-dev-server": "^3.11.0"
   }
 }
